--- a/netMusicFront/index.html
+++ b/netMusicFront/index.html
@@ -7,7 +7,7 @@
   <title>miko 的歌姬</title>
   <meta name="description" content="Opinionated Vite Starter Template">
 </head>
-<body class="font-sans dark:text-white dark:bg-hex-121212">
+<body class="font-custom dark:text-white dark:bg-hex-121212">
   <div id="app"></div>
   <script>
     (function() {
